2007-03-14  Peter Jones  <pjones@redhat.com>

	* pm/defaults:
	- add comment text (from Stefan)

2007-03-13  Peter Jones  <pjones@redhat.com>

	* configure.in:
	- bump version to 0.99.2

2007-03-13  Peter Jones  <pjones@redhat.com>

	* pm/functions:
	- add do_suspend_hybrid function

	* src/pm-action:
	- handle pm-suspend-hybrid (by exiting with error status)

	* src/pm-is-supported:
	- add this file

	* src/Makefile.am:
	- add pm-is-supported

2007-03-06  Peter Jones  <pjones@redhat.com>

	* pm/functions:
	- add /usr/lib/pm-utils/bin to $PATH

2007-03-06  Peter Jones  <pjones@redhat.com>

	* pm/hooks/00clear pm/hooks/00logging pm/hooks/10NetworkManager
	* pm/hooks/20video pm/hooks/49bluetooth pm/hooks/50modules
	* pm/hooks/55battery pm/hooks/60sysfont pm/hooks/65alsa
	* pm/hooks/90clock pm/hooks/94cpufreq pm/hooks/99video:
	- get the path for "functions" right.

2007-03-06  Peter Jones  <pjones@redhat.com>

	* configure.in:
	- bump version to 0.99.1

2007-03-06  Peter Jones  <pjones@redhat.com>

	* pm/Makefile.am:
	- rename "config" to "defaults"
	- use $(libdir)/pm-utils instead of $(sysconfdir)

	* pm/config pm/defaults:
	- rename "config" to "defaults"

	* pm/functions:
	- rename "config" to "defaults", and look for it in usr/lib/pm-utils
	- handle the new "two directories" style sleep.d 

	* pm/hooks/Makefile.am:
	- make both sleep.d directories, but put our stuff in /usr/lib

	* pm/power.d/Makefile.am:
	- make both power.d directories, but put our stuff in /usr/lib

	* src/Makefile.am:
	- move locatons of files around to fit the new layout

	* src/pm-action:
	- changes for new layout

	* src/pm-powersave:
	- handle the new "two directories" style power.d 

2007-03-06  Peter Jones  <pjones@redhat.com>

	* pm/hooks/05led:
	- use "bash" not "sh"

	* pm/hooks/10NetworkManager:
	- use "bash" not "sh"

	* pm/hooks/90clock:
	- use "bash" not "sh"

	* pm/hooks/95led:
	- use "bash" not "sh"

2007-03-01  Peter Jones  <pjones@redhat.com>
